# Makefile for torture/utils.
#
# Copyright (C) 2010 Jose E. Marchesi.
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3, or (at your option)
# any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

TESTS = recsel.sh
EXTRA_DIST = $(TESTS)
TESTS_ENVIRONMENT = top_srcdir=$(top_srcdir) PATH=$(srcdir):$(top_builddir)/utils:$$PATH

# End of Makefile.am
